[package]
name = "kafka_task_scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = "0.34.0"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
futures = "0.3.28"

[[bin]]
name = "generator"
path = "src/generator.rs"

[[bin]]
name = "processor"
path = "src/processor.rs"
